<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="24dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/path_imagen"
            android:textSize="16sp"
            style="@style/TextTitle"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                style="@style/TextBody"
                android:gravity="start"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/grafico_chi_cuadrado"
                android:textStyle="italic"
                style="@style/TextCreate"
                android:inputType="text"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/valor_inicial_x"
                android:gravity="start"
                style="@style/TextCreate"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="10.0"
                style="@style/TextCreate"
                android:textStyle="italic"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/valor_final_x"
                style="@style/TextCreate"
                android:gravity="start"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="100000.0"
                style="@style/TextCreate"
                android:textStyle="italic"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/valor_inicial_y"
                style="@style/TextCreate"
                android:gravity="start"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editTextNumber3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="1.0"
                style="@style/TextCreate"
                android:textStyle="italic"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/valor_final_y"
                style="@style/TextCreate"
                android:gravity="start"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editTextNumber4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="1.0"
                style="@style/TextCreate"
                android:textStyle="italic"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/escala_en_x"
                style="@style/TextCreate"
                android:gravity="start"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/escala_en_y"
                style="@style/TextCreate"
                android:gravity="start"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="78dp"
            android:gravity="center">

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                android:backgroundTint="#2B2B2B"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:backgroundTint="#FF6F61"
                android:textColor="#FFFFFF"
                android:layout_marginStart="8dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
