<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            >

            <TextView
                android:id="@+id/tvTheme"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/tema"
                android:textSize="20sp"
                style="@style/TextTitle" />

            <Spinner
                android:id="@+id/spinnerTheme"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:background="@drawable/dropdown_background"
                android:padding="16dp"
                android:entries="@array/mode" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            >

            <TextView
                android:id="@+id/tvDecimals"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/n_decimales"
                android:textSize="20sp"
                style="@style/TextTitle" />

            <Spinner
                android:id="@+id/spinnerDecimals"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="@drawable/dropdown_background"
                android:padding="16dp"
                android:spinnerMode="dropdown"
                android:entries="@array/decimal_options" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAbout"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/sobre_nosotros"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:cornerRadius="12dp"
            app:strokeColor="#666666"
            app:strokeWidth="2dp" />

    </LinearLayout>
</ScrollView>
